plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.7'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Async
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'com.google.code.gson:gson:2.10.1'

	// Excel
	implementation 'org.apache.poi:poi:5.2.3'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'

	// okta
//	implementation 'com.okta.spring:okta-spring-boot-starter:3.0.6'
//	implementation "com.okta.sdk:okta-sdk-api:16.0.0"
//	runtimeOnly "com.okta.sdk:okta-sdk-impl:16.0.0"
	// Page 처리
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//GDCB SSH Tool
	implementation group: 'com.sshtools', name: 'sshapi-j2ssh', version: '1.1.0'

	//PGP file
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.48'
	implementation group: 'org.bouncycastle', name: 'bcpg-jdk15on', version: '1.48'
	// CSV
	implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'


	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	implementation 'com.auth0:java-jwt:4.2.1'
}

tasks.named('test') {
	useJUnitPlatform()
}